[package]
name = "wasm-edit"
version = "0.1.7"
edition = "2021"
description = "Edit and instrument already compiled Wasm binaries"
authors = ["Sven Sauleau <sven@cloudflare.com>"]
license = "MIT"
keywords = ["wasm", "edit", "transform", "instrument"]
repository = "https://github.com/xtuc/wasm-edit"
include = ["runtime/build/runtime.wasm", "src/"]

[dependencies]
clap = { version = "4.0.17", features = ["derive"] }
leb128 = "0.2.5"
nom = "7"
byteorder = "1.4.3"
env_logger = "0.9.1"
log = "0.4.17"
threadpool = "1.8.1"
num_cpus = "1.14.0"
wasm-parser = "0.1.15"
core-wasm-ast = "0.1.15"
wasm-printer = "0.1.15"
